sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs();
  var n = getNombreValeurs();
  
  if (ecart>1) {
    ecart=(ecart.toDouble/1.3).toInt
 	 
  	i=0
 	 	while (i+ecart<n) {
   	 if (getValeur(i)>getValeur(i+ecart)) {
   	   echange(i,i+ecart)
   	   i=i+1
    }
  }
}
}